--- a/manifest.json
+++ b/manifest.json
@@ -26,11 +26,13 @@
 
     "content_scripts": [ {
       "js": ["scripts/contentMain.js"],
-      "matches": ["https://*.youtube.com/"]
+      "matches": ["https://*.youtube.com/", "https://youtube.com/"],
+      "run_at": "document_end"
     } ,
     {
       "js": ["scripts/contentWatch.js"],
-      "matches": ["https://*.youtube.com/watch"]
+      "matches": ["https://*.youtube.com/*", "https://youtube.com/*"],
+      "run_at": "document_end"
     }],
 
     "background": {
