Added options page to popup

--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,8 @@
 
     "content_scripts": [ {
       "js": ["scripts/contentMain.js"],
-      "matches": ["https://*.youtube.com/*"]
+      "matches": ["https://*.youtube.com/*"],
+      "run_at":"document_end"
     } ,
     {
       "js": ["scripts/contentWatch.js"],
