--- a/manifest.json
+++ b/manifest.json
@@ -36,7 +36,7 @@
     {
       "js": ["scripts/contentShorts.js"],
       "matches": ["https://*.youtube.com/shorts/*"],
-      "run_at": "document_start"
+      "run_at": "document_end"
     },
     {
       "js": ["scripts/contentSearch.js"],
