--- a/manifest.json
+++ b/manifest.json
@@ -35,7 +35,7 @@
     },
     {
       "js": ["scripts/contentShorts.js"],
-      "matches": ["https://*.youtube.com/shorts/*"],
+      "matches": ["https://*.youtube.com/*"],
       "run_at": "document_end"
     },
     {
